set(LLVM_BUILD_TOOLS OFF)
set(LLVM_INCLUDE_TOOLS OFF)
set(LLVM_INCLUDE_EXAMPLES OFF)
set(LLVM_INCLUDE_TESTS OFF)
set(LLVM_INCLUDE_BENCHMARKS OFF)

add_definitions(-DANTLR4CPP_STATIC)
set(ANTLR4_WITH_STATIC_CRT OFF)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/antlr4/runtime/Cpp")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/llvm")

set(CLI11_BUILD_DOCS OFF)
set(CLI11_BUILD_TESTS OFF)
set(CLI11_BUILD_EXAMPLES OFF)
set(CLI11_BUILD_EXAMPLES_JSON OFF)
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/CLI11")

add_definitions(${LLVM_DEFINITIONS})

set(DEPENDENCIES_HEADERS
  ${ANTLR4_INCLUDE_DIRS}
  "${CMAKE_CURRENT_SOURCE_DIR}/antlr4/runtime/Cpp/runtime/src"

  ${LLVM_INCLUDE_DIRS}
  "${CMAKE_CURRENT_SOURCE_DIR}/llvm/include"
  "${CMAKE_BINARY_DIR}/libs/llvm/include"

  "${CMAKE_CURRENT_SOURCE_DIR}/CLI11/include"

  PARENT_SCOPE
)
